<resources>
  <string name="app_name">Solitaire</string>
  <string name="new_game">New game</string>
  <string name="quit">Quit</string>
  <string name="retry_same_game">Retry same game</string>
  <string name="solitaire_by_jim_blackler">Android Solitaire by Jim Blackler</string>
  <string name="vibrate_on_touch">Vibrate on touch</string>
  <string name="undo_move">Undo last move</string>
  <string name="settings">Settings</string>
  <string name="rules">Rules</string>
  <string name="about">About</string>
</resources>
